--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,33 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>report-aggregate</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>report-aggregate</goal>
+						</goals>
+					</execution>
+				</executions>
+
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<forkCount>1</forkCount>
+					<redirectTestOutputToFile>true</redirectTestOutputToFile>
+					<rerunFailingTestsCount>3</rerunFailingTestsCount>
+					<argLine>-Xms512m -Xmx4096m</argLine>
+				</configuration>
+			</plugin>
+
 		</plugins>
 	</build>
 
