--- a/pom.xml
+++ b/pom.xml
@@ -19,12 +19,15 @@
 
 	<properties>
 		<java.version>11</java.version>
+		<version.jacoco>0.8.5</version.jacoco>
+		<version.surefire-failsafe>3.0.0-M4</version.surefire-failsafe>
 		<testcontainers.version>1.15.2</testcontainers.version>
 	</properties>
 
 	<modules>
 		<module>backend</module>
 		<module>frontend</module>
+		<module>report</module>
 	</modules>
 
 	<dependencyManagement>
@@ -38,5 +41,58 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
+
+	<!-- Adapted from https://github.com/arcuri82/testing_security_development_enterprise_systems/ -->
+	<build>
+		<pluginManagement>
+			<plugins>
+
+				<!-- Built-in plugin used to execute unit tests -->
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>${version.surefire-failsafe}</version>
+					<configuration>
+						<forkCount>1</forkCount>
+						<redirectTestOutputToFile>true</redirectTestOutputToFile>
+						<rerunFailingTestsCount>3</rerunFailingTestsCount>
+					</configuration>
+				</plugin>
+
+				<!--
+                    Used to calculate code-coverage of the tests
+                -->
+				<plugin>
+					<groupId>org.jacoco</groupId>
+					<artifactId>jacoco-maven-plugin</artifactId>
+					<version>${version.jacoco}</version>
+					<executions>
+						<execution>
+							<id>default-prepare-agent</id>
+							<phase>initialize</phase>
+							<goals>
+								<goal>prepare-agent</goal>
+							</goals>
+						</execution>
+						<execution>
+							<id>default-report</id>
+							<phase>prepare-package</phase>
+							<goals>
+								<goal>report</goal>
+							</goals>
+						</execution>
+						<execution>
+							<id>default-report-integration</id>
+							<phase>verify</phase>
+							<goals>
+								<goal>report-integration</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
+
+			</plugins>
+		</pluginManagement>
+	</build>
 
 </project>
